# ferramenta-de-anotacao-tfc

./: .gitignore  README.md  cursor_rules.md  development_structure.md  docker-compose.yml  requirements_backend.md  test_api.py
admin-ui/: Dockerfile  package-lock.json  package.json
admin-ui/src/: App.tsx
admin-ui/src/api/: client.ts  import.ts  projects.ts
admin-ui/src/components/: AppShell.tsx
annotation-admin-ui-copy/: Dockerfile  index.html  package-lock.json  package.json
annotation-admin-ui-copy/src/: App.tsx
annotation-backend-copy/: README.md  docker-compose.yml  generate_erd.py  pyproject.toml  test_dataitem_db.py
annotation-backend-copy/app/: config.py  database.py  main.py  models.py  schemas.py
annotation-backend-tfc/: api_test_suite.py  pyproject.toml  requirements.txt
annotation-backend-tfc/alembic/: env.py
annotation-backend-tfc/app/: config.py  database.py  models.py  schemas.py
annotation-backend-tfc/app/api/: admin.py  auth.py  chat_disentanglement.py  data.py  import_data.py  projects.py
annotation-backend-thr/: .dockerignore  .env  README_CHANGES.md  annotation.db  api_test_suite.py  check_system.py  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  test_chat.csv  test_dataitem.py
annotation-backend-thr/app/: config.py  main.py  models.py  schemas.py
annotation-ui/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
annotation-ui/src/: App.tsx
bk/: docker-compose.yml
bk/annotation-admin-ui/: nginx.conf
bk/annotation-backend-tfc/: .dockerignore  Dockerfile
promtps/: mod01.md
(+79 files in other folders)
